--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,59 @@
   <head>
     <title>Summarizer</title>
     <style>
-      body { font-family: Arial, sans-serif; width: 300px; padding: 10px; }
-      button { padding: 8px 12px; margin-top: 10px; }
+      body {
+        font-family: Arial, sans-serif;
+        width: 320px;
+        padding: 15px;
+        background-color: #f9f9f9;
+      }
+      h2 {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
+      button {
+        padding: 8px 12px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #45a049;
+      }
+      .section {
+        margin-top: 15px;
+        background: #fff;
+        padding: 10px;
+        border-radius: 6px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        max-height: 250px;
+        overflow-y: auto;
+      }
+      .copy-btn {
+        background-color: #007bff;
+        margin-top: 8px;
+        border-radius: 4px;
+        font-size: 12px;
+        padding: 5px 8px;
+      }
     </style>
   </head>
   <body>
     <h2>Page Summarizer</h2>
     <button id="summarizeBtn">Summarize This Page</button>
-    <div id="result" style="margin-top:10px;"></div>
+
+    <div class="section">
+      <strong>Summary:</strong>
+      <div id="result">No summary yet.</div>
+      <button id="copySummaryBtn" class="copy-btn">Copy Summary</button>
+    </div>
+
+    <div class="section">
+      <strong>Appendix:</strong>
+      <ul id="appendix"></ul>
+    </div>
 
     <script src="popup.js"></script>
   </body>
