--- a/popup.html
+++ b/popup.html
@@ -40,11 +40,34 @@
         font-size: 12px;
         padding: 5px 8px;
       }
+      .spinner {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #3498db;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        animation: spin 1s linear infinite;
+        margin: 10px auto;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+      #loading p {
+        font-size: 12px;
+        color: #666;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
     <h2>Page Summarizer</h2>
     <button id="summarizeBtn">Summarize This Page</button>
+
+    <div id="loading" style="display:none;">
+      <div class="spinner"></div>
+      <p>Summarizing... This may take a few seconds.</p>
+    </div>
 
     <div class="section">
       <strong>Summary:</strong>
