--- a/popup.html
+++ b/popup.html
@@ -77,7 +77,7 @@
 
     <div class="section">
       <strong>Appendix:</strong>
-      <ul id="appendix"></ul>
+      <div id="appendix"></div>
     </div>
 
     <script src="popup.js"></script>
