--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
       }
       button {
         padding: 8px 12px;
-        background-color: #4CAF50;
+        background-color: #4caf50;
         color: white;
         border: none;
         border-radius: 4px;
@@ -29,7 +29,7 @@
         background: #fff;
         padding: 10px;
         border-radius: 6px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         max-height: 250px;
         overflow-y: auto;
       }
@@ -50,8 +50,12 @@
         margin: 10px auto;
       }
       @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
       }
       #loading p {
         font-size: 12px;
@@ -62,9 +66,21 @@
   </head>
   <body>
     <h2>Page Summarizer</h2>
+    <div class="section">
+      <strong>Or Paste Your Text:</strong>
+      <textarea
+        id="userInput"
+        rows="5"
+        placeholder="Paste text here..."
+        style="width: 100%; margin-top: 8px"
+      ></textarea>
+      <button id="summarizeInputBtn" class="copy-btn" style="margin-top: 8px">
+        Summarize This Text
+      </button>
+    </div>
     <button id="summarizeBtn">Summarize This Page</button>
 
-    <div id="loading" style="display:none;">
+    <div id="loading" style="display: none">
       <div class="spinner"></div>
       <p>Summarizing... This may take a few seconds.</p>
     </div>
