--- a/privacy.html
+++ b/privacy.html
@@ -52,6 +52,6 @@
   <p>By using this extension, you agree to this privacy policy.</p>
 
   <h2>8. Contact</h2>
-  <p>For any questions or concerns, contact: <strong>your-email@example.com</strong></p>
+  <p>For any questions or concerns, contact: <strong>vsarthak1234@gmail.com</strong></p>
 </body>
 </html>
